# State-Machine_Implementations

./: README.md
Basic_StateMachine_KitchenTimer/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_modules.txt
Basic_StateMachine_KitchenTimer/build_1/Kconfig/: Kconfig.shield.defconfig
Basic_StateMachine_KitchenTimer/build_1/modules/cmsis/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/cmsis/CMSIS/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/hal_nordic/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/mcuboot/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/memfault-firmware-sdk/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/nanopb/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/nrf/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/nrf_hw_models/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/nrfxlib/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/pelion-dm/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/tinycbor/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/modules/tinycrypt/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/zephyr/: .cmake.dotconfig.checksum  .config  CustomBle.dts.pre.d  CustomBle.dts.pre.tmp  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
Basic_StateMachine_KitchenTimer/build_1/zephyr/arch/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/zephyr/drivers/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/zephyr/kconfig/: sources.txt
Basic_StateMachine_KitchenTimer/build_1/zephyr/kernel/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/zephyr/lib/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/build_1/zephyr/subsys/: cmake_install.cmake
Basic_StateMachine_KitchenTimer/src/: main.c
ClockAlarm_StateMachine_HSM/: CMakeLists.txt  Ozone.jdebug  prj.conf
ClockAlarm_StateMachine_HSM/qm/: .StateMachine_ClockAlarm  StateMachine_ClockAlarm.qm
ClockAlarm_StateMachine_HSM/src/: ClockAlarm_SM.c  ClockAlarm_SM.h  main.c
CustomBle/: CustomBle.dts  CustomBle.yaml  CustomBle_defconfig  Kconfig.board  Kconfig.defconfig  board.cmake
CustomBle/doc/: index.rst
(+34 files in other folders)
