# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(hello_world)

target_sources(app PRIVATE src/main.c)

target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/qepn.c)
target_sources(app PRIVATE src/ClockAlarm_SM.c)
target_sources(app PRIVATE src/csrc/mui.c)
target_sources(app PRIVATE src/csrc/mui_u8g2.c)
target_sources(app PRIVATE src/csrc/u8g2_bitmap.c)
target_sources(app PRIVATE src/csrc/u8g2_box.c)
target_sources(app PRIVATE src/csrc/u8g2_buffer.c)
target_sources(app PRIVATE src/csrc/u8g2_button.c)
target_sources(app PRIVATE src/csrc/u8g2_circle.c)
target_sources(app PRIVATE src/csrc/u8g2_cleardisplay.c)
target_sources(app PRIVATE src/csrc/u8g2_d_memory.c)
target_sources(app PRIVATE src/csrc/u8g2_d_setup.c)
target_sources(app PRIVATE src/csrc/u8g2_font.c)
target_sources(app PRIVATE src/csrc/u8g2_fonts.c)
target_sources(app PRIVATE src/csrc/u8g2_hvline.c)
target_sources(app PRIVATE src/csrc/u8g2_input_value.c)
target_sources(app PRIVATE src/csrc/u8g2_intersection.c)
target_sources(app PRIVATE src/csrc/u8g2_kerning.c)
target_sources(app PRIVATE src/csrc/u8g2_line.c)
target_sources(app PRIVATE src/csrc/u8g2_ll_hvline.c)
target_sources(app PRIVATE src/csrc/u8g2_message.c)
target_sources(app PRIVATE src/csrc/u8g2_polygon.c)
target_sources(app PRIVATE src/csrc/u8g2_selection_list.c)
target_sources(app PRIVATE src/csrc/u8g2_setup.c)
target_sources(app PRIVATE src/csrc/u8log.c)
target_sources(app PRIVATE src/csrc/u8log_u8g2.c)
target_sources(app PRIVATE src/csrc/u8log_u8x8.c)
target_sources(app PRIVATE src/csrc/u8x8_8x8.c)
target_sources(app PRIVATE src/csrc/u8x8_byte.c)
target_sources(app PRIVATE src/csrc/u8x8_cad.c)
target_sources(app PRIVATE src/csrc/u8x8_capture.c)
target_sources(app PRIVATE src/csrc/u8x8_d_a2printer.c)
target_sources(app PRIVATE src/csrc/u8x8_d_gu800.c)
target_sources(app PRIVATE src/csrc/u8x8_d_st7565.c)
target_sources(app PRIVATE src/csrc/u8x8_debounce.c)
target_sources(app PRIVATE src/csrc/u8x8_display.c)
target_sources(app PRIVATE src/csrc/u8x8_fonts.c)
target_sources(app PRIVATE src/csrc/u8x8_gpio.c)
target_sources(app PRIVATE src/csrc/u8x8_input_value.c)
target_sources(app PRIVATE src/csrc/u8x8_message.c)
target_sources(app PRIVATE src/csrc/u8x8_selection_list.c)
target_sources(app PRIVATE src/csrc/u8x8_setup.c)
target_sources(app PRIVATE src/csrc/u8x8_string.c)
target_sources(app PRIVATE src/csrc/u8x8_u16toa.c)
target_sources(app PRIVATE src/csrc/u8x8_u8toa.c)

